[project]
name = "auction-scraper"
version = "0.1.0"
description = "Scraper for astalegale.net auctions"
authors = [
    {name = "Developer"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
